--- a/TAF.Application/SCBF.Application.csproj
+++ b/TAF.Application/SCBF.Application.csproj
@@ -169,7 +169,10 @@
     <Compile Include="Car\Dto\OctaneStoreQueryDto.cs" />
     <Compile Include="Car\Dto\OilCardEditDto.cs" />
     <Compile Include="Car\Dto\OilCardListDto.cs" />
+    <Compile Include="Car\Dto\OilCardProofListDto.cs" />
     <Compile Include="Car\Dto\OilCardQueryDto.cs" />
+    <Compile Include="Car\Dto\OilRechargeRecordEditDto.cs" />
+    <Compile Include="Car\Dto\OilRechargeRecordListDto.cs" />
     <Compile Include="Car\Dto\RechargeRecordEditDto.cs" />
     <Compile Include="Car\Dto\RechargeRecordListDto.cs" />
     <Compile Include="Car\Dto\RechargeRecordQueryDto.cs" />
@@ -178,9 +181,13 @@
     <Compile Include="Car\IDriverAppService.cs" />
     <Compile Include="Car\IOctaneStoreAppService.cs" />
     <Compile Include="Car\IOilCardAppService.cs" />
+    <Compile Include="Car\IOilCardProofAppService.cs" />
+    <Compile Include="Car\IOilRechargeRecordAppService.cs" />
     <Compile Include="Car\IRechargeRecordAppService.cs" />
     <Compile Include="Car\OctaneStoreAppService.cs" />
     <Compile Include="Car\OilCardAppService.cs" />
+    <Compile Include="Car\OilCardProofAppService.cs" />
+    <Compile Include="Car\OilRechargeRecordAppService.cs" />
     <Compile Include="Car\RechargeRecordAppService.cs" />
     <Compile Include="Finance\Dto\BudgetPerformanceListDto.cs" />
     <Compile Include="Finance\Dto\OutlayQueryDto.cs" />
