--- a/TAF.Core/SCBF.Core.csproj
+++ b/TAF.Core/SCBF.Core.csproj
@@ -116,11 +116,15 @@
     <Compile Include="Car\ICarInfoRepository.cs" />
     <Compile Include="Car\IDriverRepository.cs" />
     <Compile Include="Car\IOctaneStoreRepository.cs" />
+    <Compile Include="Car\IOilCardProofRepository.cs" />
     <Compile Include="Car\IOilCardRepository.cs" />
     <Compile Include="Car\IRechargeRecordRepository.cs" />
     <Compile Include="Car\OctaneStore.cs" />
     <Compile Include="Car\OilCard.cs" />
+    <Compile Include="Car\OilCardProof.cs" />
+    <Compile Include="Car\OilRechargeRecord.cs" />
     <Compile Include="Car\RechargeRecord.cs" />
+    <Compile Include="Car\UploadOilCardRoof.cs" />
     <Compile Include="Finance\IOutlayRepository.cs" />
     <Compile Include="Finance\Outlay.cs" />
     <Compile Include="Storage\Check.cs" />
@@ -156,6 +160,7 @@
     <Compile Include="Storage\Product.cs" />
     <Compile Include="Storage\HisStock.cs" />
     <Compile Include="Storage\Stock.cs" />
+    <Compile Include="TAF.Core\Car\IOilRechargeRecordRepository.cs" />
     <Compile Include="TAFEntity.cs" />
     <Compile Include="TAFConsts.cs" />
     <Compile Include="TAFCoreModule.cs" />
