--- a/TAF.EntityFramework/SCBF.EntityFramework.csproj
+++ b/TAF.EntityFramework/SCBF.EntityFramework.csproj
@@ -129,6 +129,7 @@
     <Compile Include="EntityFramework\Maps\ActualOutlayMap.cs" />
     <Compile Include="EntityFramework\Maps\BudgetOutlayMap.cs" />
     <Compile Include="EntityFramework\Maps\ApplicationForBunkerAMap.cs" />
+    <Compile Include="EntityFramework\Maps\OilRechargeRecordMap.cs" />
     <Compile Include="EntityFramework\Maps\OilCardMap.cs" />
     <Compile Include="EntityFramework\Maps\RechargeRecordMap.cs" />
     <Compile Include="EntityFramework\Maps\DeliveryMap.cs" />
@@ -265,6 +266,14 @@
     <Compile Include="Migrations\201706291422022_updateTable_ApplicationForBunkerA1.Designer.cs">
       <DependentUpon>201706291422022_updateTable_ApplicationForBunkerA1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707031308161_addtable_OilCardProofs.cs" />
+    <Compile Include="Migrations\201707031308161_addtable_OilCardProofs.Designer.cs">
+      <DependentUpon>201707031308161_addtable_OilCardProofs.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707051557377_addTable_OilRechargeRecord.cs" />
+    <Compile Include="Migrations\201707051557377_addTable_OilRechargeRecord.Designer.cs">
+      <DependentUpon>201707051557377_addTable_OilRechargeRecord.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\AbpZeroDbMigrator.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\SeedData\DefaultCreator.cs" />
@@ -285,7 +294,9 @@
     <Compile Include="Repositories\HisStockRepository.cs" />
     <Compile Include="Repositories\LayerRepository.cs" />
     <Compile Include="Repositories\OctaneStoreRepository.cs" />
+    <Compile Include="Repositories\OilCardProofRepository.cs" />
     <Compile Include="Repositories\OilCardRepository.cs" />
+    <Compile Include="Repositories\OilRechargeRecordRepository.cs" />
     <Compile Include="Repositories\ProductRepository.cs" />
     <Compile Include="Repositories\ReceiptRepository.cs" />
     <Compile Include="Repositories\RechargeRecordRepository.cs" />
@@ -407,6 +418,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706291422022_updateTable_ApplicationForBunkerA1.resx">
       <DependentUpon>201706291422022_updateTable_ApplicationForBunkerA1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707031308161_addtable_OilCardProofs.resx">
+      <DependentUpon>201707031308161_addtable_OilCardProofs.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707051557377_addTable_OilRechargeRecord.resx">
+      <DependentUpon>201707051557377_addTable_OilRechargeRecord.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
