--- a/TAF.Application/SCBF.Application.csproj
+++ b/TAF.Application/SCBF.Application.csproj
@@ -176,6 +176,7 @@
     <Compile Include="Car\Dto\RechargeRecordEditDto.cs" />
     <Compile Include="Car\Dto\RechargeRecordListDto.cs" />
     <Compile Include="Car\Dto\RechargeRecordQueryDto.cs" />
+    <Compile Include="Car\Dto\UploadOilCarRoofListDto.cs" />
     <Compile Include="Car\IApplicationForBunkerAAppService.cs" />
     <Compile Include="Car\ICarInfoAppService.cs" />
     <Compile Include="Car\IDriverAppService.cs" />
