--- a/TAF.EntityFramework/SCBF.EntityFramework.csproj
+++ b/TAF.EntityFramework/SCBF.EntityFramework.csproj
@@ -274,6 +274,14 @@
     <Compile Include="Migrations\201707051557377_addTable_OilRechargeRecord.Designer.cs">
       <DependentUpon>201707051557377_addTable_OilRechargeRecord.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707131305473_addTable_UploadOilCarRoofRelationship.cs" />
+    <Compile Include="Migrations\201707131305473_addTable_UploadOilCarRoofRelationship.Designer.cs">
+      <DependentUpon>201707131305473_addTable_UploadOilCarRoofRelationship.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707161211576_modifytable_uploadoilcardroof.cs" />
+    <Compile Include="Migrations\201707161211576_modifytable_uploadoilcardroof.Designer.cs">
+      <DependentUpon>201707161211576_modifytable_uploadoilcardroof.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\AbpZeroDbMigrator.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\SeedData\DefaultCreator.cs" />
@@ -303,6 +311,8 @@
     <Compile Include="Repositories\StockRepository.cs" />
     <Compile Include="Repositories\SysDictionaryRepository.cs" />
     <Compile Include="Repositories\AttachmentRepository.cs" />
+    <Compile Include="Repositories\UploadOilCardRoofRepository.cs" />
+    <Compile Include="Repositories\UploadOilCarRoofRelationshipRepository.cs" />
     <Compile Include="TAFDataModule.cs" />
     <Compile Include="Migrations\SeedData\DefaultEditionsCreator.cs" />
     <Compile Include="Migrations\SeedData\DefaultLanguagesCreator.cs" />
@@ -424,6 +434,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707051557377_addTable_OilRechargeRecord.resx">
       <DependentUpon>201707051557377_addTable_OilRechargeRecord.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707131305473_addTable_UploadOilCarRoofRelationship.resx">
+      <DependentUpon>201707131305473_addTable_UploadOilCarRoofRelationship.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707161211576_modifytable_uploadoilcardroof.resx">
+      <DependentUpon>201707161211576_modifytable_uploadoilcardroof.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
