完成夏季/冬季时间设定

--- a/TAF.EntityFramework/SCBF.EntityFramework.csproj
+++ b/TAF.EntityFramework/SCBF.EntityFramework.csproj
@@ -282,6 +282,10 @@
     <Compile Include="Migrations\201707161211576_modifytable_uploadoilcardroof.Designer.cs">
       <DependentUpon>201707161211576_modifytable_uploadoilcardroof.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707201500413_addinitData_summaryRange.cs" />
+    <Compile Include="Migrations\201707201500413_addinitData_summaryRange.Designer.cs">
+      <DependentUpon>201707201500413_addinitData_summaryRange.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\AbpZeroDbMigrator.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\SeedData\DefaultCreator.cs" />
@@ -440,6 +444,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707161211576_modifytable_uploadoilcardroof.resx">
       <DependentUpon>201707161211576_modifytable_uploadoilcardroof.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707201500413_addinitData_summaryRange.resx">
+      <DependentUpon>201707201500413_addinitData_summaryRange.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
