--- a/TAF.Application/SCBF.Application.csproj
+++ b/TAF.Application/SCBF.Application.csproj
@@ -148,8 +148,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseInfo\AttachmentAppService.cs" />
-    <Compile Include="BaseInfo\DailyStoreTask.cs" />
-    <Compile Include="BaseInfo\ChangeYearTask.cs" />
+    <Compile Include="Car\Dto\HisStockDto.cs" />
+    <Compile Include="Car\HisStoreStockAppService.cs" />
+    <Compile Include="Car\IHisStoreStockAppService.cs" />
+    <Compile Include="Tasks\DailyTask.cs" />
+    <Compile Include="Tasks\Yearly.cs" />
     <Compile Include="BaseInfo\Dto\AttachmentEditDto.cs" />
     <Compile Include="BaseInfo\Dto\AttachmentListDto.cs" />
     <Compile Include="BaseInfo\Dto\AttachmentQueryDto.cs" />
@@ -275,6 +278,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Roles\IRoleAppService.cs" />
     <Compile Include="Roles\Dto\UpdateRolePermissionsInput.cs" />
+    <Compile Include="Tasks\MonthLyTask.cs" />
     <Compile Include="Tools\QueryableExtension.cs" />
     <Compile Include="Users\Dto\UserEditDto.cs" />
     <Compile Include="Users\Dto\UserQueryDto.cs" />
