--- a/TAF.Core/SCBF.Core.csproj
+++ b/TAF.Core/SCBF.Core.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Car\IApplicationForBunkerBRepository.cs" />
     <Compile Include="Car\ICarInfoRepository.cs" />
     <Compile Include="Car\IDriverRepository.cs" />
+    <Compile Include="Car\IHisOctaneStoreStockRepository.cs" />
     <Compile Include="Car\IOctaneStoreRepository.cs" />
     <Compile Include="Car\IOilCardProofRepository.cs" />
     <Compile Include="Car\IOilCardRepository.cs" />
@@ -124,6 +125,7 @@
     <Compile Include="Car\IUploadOilCardRoofRepository.cs" />
     <Compile Include="Car\IUploadOilCarRoofRelationshipRepository.cs" />
     <Compile Include="Car\OctaneStore.cs" />
+    <Compile Include="Car\HisCarStoreStock.cs" />
     <Compile Include="Car\OilCard.cs" />
     <Compile Include="Car\OilCardProof.cs" />
     <Compile Include="Car\UploadOilCarRoofRelationship.cs" />
