--- a/TAF.EntityFramework/SCBF.EntityFramework.csproj
+++ b/TAF.EntityFramework/SCBF.EntityFramework.csproj
@@ -291,6 +291,10 @@
     <Compile Include="Migrations\201707271531208_addTable_ApplicationForBunkerB.Designer.cs">
       <DependentUpon>201707271531208_addTable_ApplicationForBunkerB.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707300903359_addTable_StoreStocks.cs" />
+    <Compile Include="Migrations\201707300903359_addTable_StoreStocks.Designer.cs">
+      <DependentUpon>201707300903359_addTable_StoreStocks.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\AbpZeroDbMigrator.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\SeedData\DefaultCreator.cs" />
@@ -309,6 +313,7 @@
     <Compile Include="Repositories\DriverRepository.cs" />
     <Compile Include="Repositories\EntryBillRepository.cs" />
     <Compile Include="Repositories\EntryRepository.cs" />
+    <Compile Include="Repositories\HisOctaneStoreStockRepository.cs" />
     <Compile Include="Repositories\HisStockRepository.cs" />
     <Compile Include="Repositories\LayerRepository.cs" />
     <Compile Include="Repositories\OctaneStoreRepository.cs" />
@@ -456,6 +461,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707271531208_addTable_ApplicationForBunkerB.resx">
       <DependentUpon>201707271531208_addTable_ApplicationForBunkerB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707300903359_addTable_StoreStocks.resx">
+      <DependentUpon>201707300903359_addTable_StoreStocks.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
