--- a/TAF.Web/SCBF.Web.csproj
+++ b/TAF.Web/SCBF.Web.csproj
@@ -813,6 +813,7 @@
     <Content Include="Scripts\Account\user.js" />
     <Content Include="Scripts\actualOutlay.js" />
     <Content Include="Scripts\applicationForBunkerBSummaryList.js" />
+    <Content Include="Scripts\totalOilHisList.js" />
     <Content Include="Scripts\checkApplicationForBunkerList.js" />
     <Content Include="Scripts\applicationForAuditB.js" />
     <Content Include="Scripts\applicationForBunkerB.js" />
@@ -942,6 +943,7 @@
     <Compile Include="Controllers\EntryBillController.cs" />
     <Compile Include="Controllers\EntryController.cs" />
     <Compile Include="Controllers\FinanceController.cs" />
+    <Compile Include="Controllers\HisOilStockController.cs" />
     <Compile Include="Controllers\HisStockController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\OctaneStoreController.cs" />
@@ -1035,6 +1037,7 @@
     <Content Include="Views\ApplicationForBunkerB\_ApplicationForBunkerBIndex2.cshtml" />
     <Content Include="Views\ApplicationForBunkerB\_CheckApplicationForBunkerList.cshtml" />
     <Content Include="Views\ApplicationForBunkerB\_ApplicationForBunkerBSummaryList.cshtml" />
+    <Content Include="Views\HisOilStock\_TotalOilHisList.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
