--- a/TAF.Core/SCBF.Core.csproj
+++ b/TAF.Core/SCBF.Core.csproj
@@ -120,16 +120,22 @@
     <Compile Include="Car\ICarInfoRepository.cs" />
     <Compile Include="Car\IDriverRepository.cs" />
     <Compile Include="Car\IHisOctaneStoreStockRepository.cs" />
+    <Compile Include="Car\IMaintenanceDeliveryRepository.cs" />
+    <Compile Include="Car\IManHourRepository.cs" />
     <Compile Include="Car\IOctaneStoreRepository.cs" />
     <Compile Include="Car\IOilCardProofRepository.cs" />
     <Compile Include="Car\IOilCardRepository.cs" />
     <Compile Include="Car\IRechargeRecordRepository.cs" />
+    <Compile Include="Car\IServicingMaterialRepository.cs" />
     <Compile Include="Car\IUploadOilCardRoofRepository.cs" />
     <Compile Include="Car\IUploadOilCarRoofRelationshipRepository.cs" />
+    <Compile Include="Car\MaintenanceDelivery.cs" />
+    <Compile Include="Car\ManHour.cs" />
     <Compile Include="Car\OctaneStore.cs" />
     <Compile Include="Car\HisCarStoreStock.cs" />
     <Compile Include="Car\OilCard.cs" />
     <Compile Include="Car\OilCardProof.cs" />
+    <Compile Include="Car\ServicingMaterial.cs" />
     <Compile Include="Car\UploadOilCarRoofRelationship.cs" />
     <Compile Include="Car\OilRechargeRecord.cs" />
     <Compile Include="Car\RechargeRecord.cs" />
