--- a/TAF.Core/SCBF.Core.csproj
+++ b/TAF.Core/SCBF.Core.csproj
@@ -126,6 +126,7 @@
     <Compile Include="Car\IOilCardProofRepository.cs" />
     <Compile Include="Car\IOilCardRepository.cs" />
     <Compile Include="Car\IRechargeRecordRepository.cs" />
+    <Compile Include="Car\IRepairCostRepository.cs" />
     <Compile Include="Car\IServicingMaterialRepository.cs" />
     <Compile Include="Car\IUploadOilCardRoofRepository.cs" />
     <Compile Include="Car\IUploadOilCarRoofRelationshipRepository.cs" />
@@ -135,6 +136,7 @@
     <Compile Include="Car\HisCarStoreStock.cs" />
     <Compile Include="Car\OilCard.cs" />
     <Compile Include="Car\OilCardProof.cs" />
+    <Compile Include="Car\RepairCost.cs" />
     <Compile Include="Car\ServicingMaterial.cs" />
     <Compile Include="Car\UploadOilCarRoofRelationship.cs" />
     <Compile Include="Car\OilRechargeRecord.cs" />
