--- a/TAF.Web/SCBF.Web.csproj
+++ b/TAF.Web/SCBF.Web.csproj
@@ -813,6 +813,7 @@
     <Content Include="Scripts\Account\user.js" />
     <Content Include="Scripts\actualOutlay.js" />
     <Content Include="Scripts\applicationForBunkerBSummaryList.js" />
+    <Content Include="Scripts\audingForVehicleMaintenance3.js" />
     <Content Include="Scripts\audingForVehicleMaintenance2.js" />
     <Content Include="Scripts\audingForVehicleMaintenance.js" />
     <Content Include="Scripts\applyForVehicleMaintenance.js" />
@@ -1047,6 +1048,7 @@
     <Content Include="Views\ApplyForVehicleMaintenance\_AudingForVehicleMaintenanceIndex.cshtml" />
     <Content Include="Views\Car\_MaintenancePartsIndex.cshtml" />
     <Content Include="Views\ApplyForVehicleMaintenance\_AudingForVehicleMaintenance2Index.cshtml" />
+    <Content Include="Views\ApplyForVehicleMaintenance\_AudingForVehicleMaintenance3Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
