油料核算填报表

--- a/TAF.Application/SCBF.Application.csproj
+++ b/TAF.Application/SCBF.Application.csproj
@@ -149,10 +149,14 @@
   <ItemGroup>
     <Compile Include="BaseInfo\AttachmentAppService.cs" />
     <Compile Include="Car\ApplyForVehicleMaintenanceAppService.cs" />
+    <Compile Include="Car\CarOilAppService.cs" />
     <Compile Include="Car\Dto\ApplyForVehicleMaintenanceEditDto.cs" />
     <Compile Include="Car\Dto\ApplyForVehicleMaintenanceListDto.cs" />
     <Compile Include="Car\Dto\ApplyForVehicleMaintenanceQueryDto.cs" />
     <Compile Include="Car\Dto\ApplyForVehicleMaintenanceUpdateDto.cs" />
+    <Compile Include="Car\Dto\CarOilEditDto.cs" />
+    <Compile Include="Car\Dto\CarOilListDto.cs" />
+    <Compile Include="Car\Dto\CarOilQueryDto.cs" />
     <Compile Include="Car\Dto\HisOilCardListDto.cs" />
     <Compile Include="Car\Dto\HisOilStoreListDto.cs" />
     <Compile Include="Car\Dto\HisStockDto.cs" />
@@ -165,6 +169,7 @@
     <Compile Include="Car\Dto\VehicleMaintenanceReportDto.cs" />
     <Compile Include="Car\HisStoreStockAppService.cs" />
     <Compile Include="Car\IApplyForVehicleMaintenanceAppService.cs" />
+    <Compile Include="Car\ICarOilAppService.cs" />
     <Compile Include="Car\IHisStoreStockAppService.cs" />
     <Compile Include="Car\IRepairCostAppService.cs" />
     <Compile Include="Car\RepairCostAppService.cs" />
