--- a/TAF.Core/SCBF.Core.csproj
+++ b/TAF.Core/SCBF.Core.csproj
@@ -113,11 +113,13 @@
     <Compile Include="Car\ApplicationForBunkerB.cs" />
     <Compile Include="Car\ApplyForVehicleMaintenance.cs" />
     <Compile Include="Car\CarInfo.cs" />
+    <Compile Include="Car\CarOil.cs" />
     <Compile Include="Car\Driver.cs" />
     <Compile Include="Car\IApplicationForBunkerARepository.cs" />
     <Compile Include="Car\IApplicationForBunkerBRepository.cs" />
     <Compile Include="Car\IApplyForVehicleMaintenanceRepository.cs" />
     <Compile Include="Car\ICarInfoRepository.cs" />
+    <Compile Include="Car\ICarOilRepository.cs" />
     <Compile Include="Car\IDriverRepository.cs" />
     <Compile Include="Car\IHisOctaneStoreStockRepository.cs" />
     <Compile Include="Car\IMaintenanceDeliveryRepository.cs" />
